--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+title: Ryan's Tech Fragments
 author: Ryan Archer
+description: This is where I stash scraps of technical knowledge that seem like they might be useful.
 
 theme: jekyll-theme-slate
