Shorten title and description.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Ryan's Tech Fragments
+title: Tech Fragments
 author: Ryan Archer
-description: This is where I stash scraps of technical knowledge that seem like they might be useful.
+description: This is where I stash scraps of technical knowledge that seem useful.
 
 theme: jekyll-theme-slate
