Shorten title even more.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Tech Fragments
+title: Fragments
 author: Ryan Archer
 description: This is where I stash scraps of technical knowledge that seem useful.
 
