--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Fragments
 author: Ryan Archer
-description: This is where I stash scraps of technical lore that seem to be useful.
+description: This is where I stash scraps of technical lore that seem useful.
 
 theme: jekyll-theme-slate
