--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Fragments
 author: Ryan Archer
 description: This is where I stash scraps of technical lore that seem useful.
 
-theme: jekyll-theme-slate
+theme: jekyll-theme-cayman
